exports[`<Sidebar /> renders children correctly 1`] = `
<aside
  className="sc-dxgOiQ diWYSQ">
  <section
    className="sc-kpOJdX lmOAbF"
    name="sidebar-wrapper">
    <span
      collapse={false}>
      Child
    </span>
  </section>
</aside>
`;

exports[`<Sidebar /> renders correctly with collapsed option 1`] = `
<aside
  className="sc-dxgOiQ jpBZaL">
  <section
    className="sc-kpOJdX lmOAbF"
    name="sidebar-wrapper" />
</aside>
`;

exports[`<Sidebar /> renders correctly with default options 1`] = `
<aside
  className="sc-dxgOiQ diWYSQ">
  <section
    className="sc-kpOJdX lmOAbF"
    name="sidebar-wrapper" />
</aside>
`;

exports[`<Sidebar /> renders correctly with fixed and collapsed options 1`] = `
<aside
  className="sc-dxgOiQ fibbUg">
  <section
    className="sc-kpOJdX lmOAbF"
    name="sidebar-wrapper" />
</aside>
`;

exports[`<Sidebar /> renders correctly with fixed option 1`] = `
<aside
  className="sc-dxgOiQ jCSIDM">
  <section
    className="sc-kpOJdX lmOAbF"
    name="sidebar-wrapper" />
</aside>
`;

exports[`<Sidebar /> renders correctly with mini and collapsed options 1`] = `
<aside
  className="sc-dxgOiQ cxcOf">
  <section
    className="sc-kpOJdX lmOAbF"
    name="sidebar-wrapper" />
</aside>
`;

exports[`<Sidebar /> renders correctly with mini and fixed options 1`] = `
<aside
  className="sc-dxgOiQ jCSIDM">
  <section
    className="sc-kpOJdX lmOAbF"
    name="sidebar-wrapper" />
</aside>
`;

exports[`<Sidebar /> renders correctly with mini option 1`] = `
<aside
  className="sc-dxgOiQ diWYSQ">
  <section
    className="sc-kpOJdX lmOAbF"
    name="sidebar-wrapper" />
</aside>
`;

exports[`<Sidebar /> renders correctly with mini, fixed, and collapsed options 1`] = `
<aside
  className="sc-dxgOiQ cUtBUN">
  <section
    className="sc-kpOJdX lmOAbF"
    name="sidebar-wrapper" />
</aside>
`;

exports[`<Sidebar /> renders correctly with theme 1`] = `
<aside
  className="sc-dxgOiQ cnfzRs">
  <section
    className="sc-kpOJdX lmOAbF"
    name="sidebar-wrapper" />
</aside>
`;
